# Arm-Hackathon-2024

./: .gitignore  README.md
TASK_FOUR/: FSM_design.v
TASK_ONE/: CMakeLists.txt  README  example.txt  parse_data.py
TASK_TWO/: CMakeLists.txt  main.c
TASK_TWO/src/: main.cpp  metrics.hpp
